tests/NormalTests/paczka2/big_fuzzy/65241874.err
Error in line 22: ghiTWG S692 31,2
Error in line 27: Cldddvtf1 S692 14,0
Error in line 28: eo6Cc S249 94,3
Error in line 23: ghiTWG A312 77,3
Error in line 16: tWcD9Xjk2 S692 288,4
Error in line 24: B9PO A934 46,8
Error in line 54: A934 A934 78,01
Error in line 60: Cldddvtf1 S692 36,2
Error in line 69: eo6Cc S692 32,7
Error in line 70: eo6Cc S249 68,1
Error in line 73: B9PO S692 77,3
Error in line 76: HW2L S249 75,1
Error in line 80: tWcD9Xjk2 A934 54,1
Error in line 78: HW2L A934 75,3
Error in line 86: ghiTWG A312 32,0
Error in line 84: HW2L S692 23,5
Error in line 94: tWcD9Xjk2 A312 254,1
Error in line 107: tWcD9Xjk2 A312 89,6
Error in line 110: tWcD9Xjk2 S249 311,45
Error in line 109: ghiTWG A934 69,4
Error in line 112: eo6Cc S249 55,8
Error in line 119: B9PO S692 18,7
Error in line 131: Cldddvtf1 S249 29,6
Error in line 126: A934 A934 148,0
Error in line 144: HW2L A934 30,6
Error in line 146: ghiTWG A312 9,2
Error in line 150: ghiTWG S692 33,3
Error in line 156: B9PO A312 49,52
Error in line 158: eo6Cc A934 38,7
Error in line 149: B9PO S692 6,0
Error in line 164: eo6Cc S692 85,0
Error in line 166: eo6Cc S249 20,9
Error in line 153: tWcD9Xjk2 S692 87,6
Error in line 176: Cldddvtf1 S249 27,36
Error in line 175: Cldddvtf1 A934 84,0
Error in line 177: Cldddvtf1 S249 54,4
Error in line 181: A934 S249 40,0
Error in line 186: A934 A312 17,9
Error in line 195: eo6Cc A934 123,87
Error in line 198: eo6Cc S249 96,4
Error in line 200: eo6Cc A934 102,0
Error in line 206: HW2L S692 91,9
Error in line 205: A934 A934 92,4
Error in line 208: ghiTWG A934 86,4
Error in line 204: eo6Cc S249 20,3
Error in line 222: tWcD9Xjk2 S249 84,84
Error in line 210: A934 A312 42,6
Error in line 224: HW2L A312 120,91
Error in line 230: Cldddvtf1 A934 8,4
Error in line 241: eo6Cc A312 437,2
